crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-valid-functiondecl-hoisting/error.txt
Found 1 error:

Todo: [PruneHoistedContexts] Rewrite hoisted function references

error.todo-valid-functiondecl-hoisting.ts:13:11
  11 |
  12 |   function foo() {
> 13 |     return bar();
     |            ^^^ [PruneHoistedContexts] Rewrite hoisted function references
  14 |   }
  15 |   function bar() {
  16 |     return 42;
